--- a/app/views/edit_form.html.haml
+++ b/app/views/edit_form.html.haml
@@ -1,4 +1,4 @@
-- grid = controller.screen.grids.first
+- grid = controller.screen.grids.find{|g| g.name == params["grid"]} || controller.screen.grids.first
 - if grid.action_names.include?('edit')
   :ruby
     model_name = grid.model.name.underscore
