--- a/app/views/_grid.html.haml
+++ b/app/views/_grid.html.haml
@@ -1,5 +1,5 @@
 - current_user = (controller.respond_to?(:current_user) ? controller.current_user : nil)
-.grid_container{:id => "grid_#{grid.name}", :style => grid.style}
+.grid_container{:id => "grid_#{grid.name}", :name => "#{grid.name}",:style => grid.style}
   - unless grid.hide_header?
     .grid-header
       %h2= grid.title
