MISC - make the menu item hide able

--- a/app/views/_menu.html.haml
+++ b/app/views/_menu.html.haml
@@ -14,9 +14,9 @@
               = menu_entry.title
             %ul
               - menu_entry.each do |submenu_entry|
-                %li.item= link_to submenu_entry.title, submenu_entry.path
+                %li.item{:style => submenu_entry.is_hidden? ? "display:none" : ""}= link_to submenu_entry.title, submenu_entry.path
         - else
-          %li.itme= link_to menu_entry.title, menu_entry.path
+          %li.item= link_to menu_entry.title, menu_entry.path
   
   - if defined?(WulinOAuth)
     #user_nav
