REFACTOR #11000 1h - if origin path includes filters, and them into filter

--- a/app/views/_grid.html.haml
+++ b/app/views/_grid.html.haml
@@ -8,12 +8,12 @@
       = grid.toolbar.render
   .grid
   .pager
-
   :javascript
     gridManager.createNewGrid('#{grid.name.to_s.html_safe}',
                               '#{grid.model.to_s.html_safe}',
                               '#{grid.params["screen"].to_s.html_safe}',
                               '#{grid.path_for_json(request.query_parameters).to_s.html_safe}',
+                               #{grid.params["filters"].to_json.html_safe},
                                #{grid.javascript_column_model.html_safe},
                                #{grid.states_for_user(current_user).html_safe},
                                #{grid.action_configs.to_json.html_safe},
