REFACTOR #10967 3h - Add attach_detail action for master-detail grid
- enhanced and fix pop up grid filter bug

--- a/app/assets/stylesheets/toolbar.sass
+++ b/app/assets/stylesheets/toolbar.sass
@@ -52,3 +52,5 @@ $toolbar_button_height:  48px
 .toolbar_icon_disabled
   +opacity(0.4)
   :cursor default !important
+.add_detail_action
+  :min-width 75px
