REFACTOR #10971 1d - Improve the toolbar css, make it automatically fit the screen width

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -5,6 +5,10 @@
   color: green;
 }
 
+.hidden {
+  display: none;
+}
+
 .slt {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 13px;
