--- a/app/assets/stylesheets/body.sass
+++ b/app/assets/stylesheets/body.sass
@@ -31,7 +31,7 @@ h1
       :font-size              16px
       :font-weight            bold
       :color                  #555
-      :display                inline-block
+      :float                  left
       +text-shadow(#efefef 1px 1px 0)
       
   .pager
