REFACTOR #10971 2h - Improve the toolbar css, make it automatically fit the screen width
- Improve some bugs

--- a/app/assets/stylesheets/toolbar.sass
+++ b/app/assets/stylesheets/toolbar.sass
@@ -6,6 +6,7 @@ $toolbar_button_height:  48px
 .grid-header
   .toolbar-wrapper
     :position           absolute
+    :top                0
     :right              15px
     :padding-top        5px
     :margin             0
