--- a/app/views/_grid.html.haml
+++ b/app/views/_grid.html.haml
@@ -26,4 +26,4 @@
                              #{grid.options.to_json.html_safe});
 
   // Initial adjusting toolbar
-  dynamicToolbar();
+  dynamicToolbar(true);
