--- a/app/assets/stylesheets/toolbar.sass
+++ b/app/assets/stylesheets/toolbar.sass
@@ -7,7 +7,7 @@ $toolbar_button_height:  48px
   .toolbar-wrapper
     :position           absolute
     :top                0
-    :right              15px
+    :right              20px
     :padding-top        5px
     :margin             0
     :overflow           hidden
@@ -45,9 +45,13 @@ $toolbar_button_height:  48px
     :position     absolute
     :cursor       default
     :top          20px
+    :width        16px
+    :height       16px
   span.tb_prev
+    :background   image-url('ui/prev_icon.png') no-repeat top center
     :float        left
   span.tb_next
+    :background   image-url('ui/next_icon.png') no-repeat top center
     :right        5px
 
         
