MISC - Verify User.current_user when render menu

--- a/app/views/_menu.html.haml
+++ b/app/views/_menu.html.haml
@@ -18,7 +18,7 @@
         - else
           %li.item= link_to menu_entry.title, menu_entry.path
   
-  - if defined?(WulinOAuth)
+  - if defined?(WulinOAuth) and User.current_user
     #user_nav
       #user_email 
         User: 
