MISC - add remove icon

--- a/app/assets/stylesheets/toolbar.sass
+++ b/app/assets/stylesheets/toolbar.sass
@@ -71,6 +71,8 @@ $toolbar_button_height:  48px
   :background             image-url('ui/toggle_icon.png') no-repeat top center
 .toolbar_icon_sync
   :background             image-url('ui/sync_icon.png') no-repeat top center
+.toolbar_icon_remove
+  :background             image-url('ui/remove_icon.png') no-repeat top center
 .toolbar_icon_disabled
   +opacity(0.4)
   :cursor default !important
