MISC - improved toolbar prev next button css

--- a/app/assets/stylesheets/toolbar.sass
+++ b/app/assets/stylesheets/toolbar.sass
@@ -47,6 +47,8 @@ $toolbar_button_height:  48px
     :top          20px
     :width        16px
     :height       16px
+    &:hover
+      :cursor pointer
   span.tb_prev
     :background   image-url('ui/prev_icon.png') no-repeat top center
     :float        left
