MISC - Improved panel buttons position, and refactor inclusion-exclusion panel html and css

--- a/app/views/_panel.html.haml
+++ b/app/views/_panel.html.haml
@@ -1,2 +1,7 @@
 .panel_container{:id => "panel_#{panel.name}", :style => panel.style}
   = panel.render
+
+:javascript
+  $(function(){
+    adjustPanelButtons();
+  })
