--- a/app/assets/stylesheets/panel.sass
+++ b/app/assets/stylesheets/panel.sass
@@ -1,17 +1,15 @@
 .panel_container
   float: left
-
-#panel_inclusion_exclusion
-  fieldset
-    height: 96%
-    margin: 3%
+  fieldset.panel_wrapper
+    height: 99%
+    margin: 1%
     padding: 0
     position: relative
-    .action_btns
-      position: absolute
-      top: 36%
-      padding: 0 5%
-      .btn
+    .panel_btns
+      margin-left: auto
+      margin-right: auto
+      width: 80%
+      button
         width: 100%
-      #remove_btn
-        margin-top: 10px
+
+
