MISC - enhanced the ajax delete request to support the confirmation case

--- a/app/views/home.html.haml
+++ b/app/views/home.html.haml
@@ -7,6 +7,6 @@
   #confirm_dialog.ui-state-highlight{:style => "display: none;", :title => "Confirmation"}
     %h4
       %span.ui-icon.ui-icon-alert{:style => "float: left; margin-right: .2em;"}
-      Are you sure to do this ?
+      #confirm_content="Are you sure to do this ?"
 
 
