MISC - add link unlink icon

--- a/app/assets/stylesheets/toolbar.sass
+++ b/app/assets/stylesheets/toolbar.sass
@@ -78,5 +78,9 @@ $toolbar_button_height:  50px
 .toolbar_icon_disabled
   +opacity(0.4)
   :cursor default !important
+.toolbar_icon_link
+  :background             image-url('ui/link_icon.png') no-repeat top center
+.toolbar_icon_unlink
+  :background             image-url('ui/unlink_icon.png') no-repeat top center
 .add_detail_action
   :min-width 75px
