REFACTOR 5h - grid and panel custom configs are added into config pools at the time of class loaded rather than instance initializing, so to fix the bug of config pools polution

--- a/app/views/panel_partials/wulin_master/_inclusion_exclusion.html.haml
+++ b/app/views/panel_partials/wulin_master/_inclusion_exclusion.html.haml
@@ -1,5 +1,5 @@
 %fieldset.panel_wrapper
-  .panel_btns{:"data-inclusion-grid" => panel.params["inclusion_grid"], :"data-exclusion-grid" => panel.params["exclusion_grid"]}
+  .panel_btns{:"data-inclusion-grid" => panel.inclusion_grid, :"data-exclusion-grid" => panel.exclusion_grid }
     = button_tag '<- Add', type: 'button', class: 'btn success', id: 'add_btn', disabled: true
     = button_tag 'Remove ->', type: 'button', class: 'btn danger', id: 'remove_btn', disabled: true
 
