MISC - Change panel template render way,use the normal way in order to use url helpers and other helpers in it. and can be append extra panel partial with engine

--- a/app/views/_panel.html.haml
+++ b/app/views/_panel.html.haml
@@ -2,7 +2,7 @@
   - if panel.title
     .panel-header
       %h2=panel.title
-  = panel.render
+  = render :partial => "panel_partials/#{panel.partial}", :locals => {:panel => panel}
 
 :javascript
   $(function(){
