MISC - toolbar ul set float right

--- a/app/assets/stylesheets/toolbar.sass
+++ b/app/assets/stylesheets/toolbar.sass
@@ -17,6 +17,7 @@ $toolbar_button_height:  50px
       ul
         :margin     0
         :padding    0
+        :float      right
         li.toolbar_item
           :float            left
           :padding-left     5px
