--- a/app/views/_grid.html.haml
+++ b/app/views/_grid.html.haml
@@ -1,10 +1,9 @@
-- current_user = (controller.respond_to?(:current_user) ? controller.current_user : nil)
 .grid_container{:id => "grid_#{grid.name}", :name => "#{grid.name}",:style => grid.style}
   - unless grid.hide_header?
     .grid-header
       %h2= grid.title
       - grid.header_actions.each do |a|
-        = render "action_partials/#{a[:name]}" rescue nil
+        = render("/action_partials/#{a[:name]}", :grid => grid) rescue nil
       %span.tb_prev.hidden
       .toolbar-wrapper
         .toolbar(data-grid="#{@grid_name}")
@@ -23,7 +22,7 @@
                             '#{grid.path_for_json(request.query_parameters).to_s.html_safe}',
                              #{grid.params["filters"].to_json.html_safe},
                              #{grid.javascript_column_model.html_safe},
-                             #{grid.states_for_user(current_user).html_safe},
+                             #{grid.states_for_user(@current_user).html_safe},
                              #{grid.action_configs.to_json.html_safe},
                              #{grid.behavior_configs.to_json.html_safe},
                              #{grid.options.to_json.html_safe});
