--- a/app/views/index.html.haml
+++ b/app/views/index.html.haml
@@ -1,4 +1,4 @@
-- controller.screen.components.each_with_index do |component, index|
+- @components.each_with_index do |component, index|
  = render :partial => '/grid', :locals => {:grid => component} if component.is_a?(WulinMaster::Grid)
  = render :partial => '/panel', :locals => {:panel => component} if component.is_a?(WulinMaster::Panel)
  - break if component.respond_to?(:fill_window?) and component.fill_window?
