--- a/app/views/action_partials/_multiple_grid_states.html.haml
+++ b/app/views/action_partials/_multiple_grid_states.html.haml
@@ -1,3 +1,37 @@
 .grid_states_switcher
   =label_tag "grid_states", "Grid States:"
   =select_tag "grid_states", options_for_select(grid_states_options(@current_user.id, grid.name))
+  =button_tag "manage", class: 'manage btn success'
+
+.states_manage_form.hidden{:title => "Manage Grid States"}
+  = form_for :grid_states, :url => orders_path do |f|
+    - grid_states_options(@current_user.id, grid.name).each_with_index do |state_option, index|
+      .state_field
+        =f.hidden_field :id, :value => state_option.last
+        =f.text_field :name, :value => state_option.first
+    .state_submit
+      %input.btn.success{:id => 'save_states', :name => "commit", :type => "submit", :value => "Save"}
+
+:javascript
+  $(function(){
+    $(".state_field").simple_clone({
+      label: "State ",
+      label_colon: true
+    });
+
+    $("button.manage").click(function(){
+      $(".states_manage_form").dialog({
+        height: 250,
+        width: 400,
+        modal: true
+      });
+    });
+
+    // register 'Create' button click event, need to remove to dialog action later
+    $('.state_submit#save_states').on('click', function() {
+      // Requests.createByAjax(grid, false);
+      // return false;
+      $(".states_manage_form").dialog('close');
+    });
+
+  });
