FEATURE #6416 @1d - Framework: Allow user to save different user states under names and recall a given user state
- done the states management

--- a/app/assets/stylesheets/toolbar.sass
+++ b/app/assets/stylesheets/toolbar.sass
@@ -85,3 +85,5 @@ $toolbar_button_height:  50px
   :background             image-url('ui/unlink_icon.png') no-repeat top center
 .add_detail_action
   :min-width 75px
+.configure_icon_s
+  :background             image-url('ui/configure_icon_s.png') no-repeat top center
