--- a/app/assets/stylesheets/grid_states.css.scss
+++ b/app/assets/stylesheets/grid_states.css.scss
@@ -1,15 +1,17 @@
 .grid_states_switcher {
-  min-width: 320px;
-  width: 25%;
+  min-width: 250px;
   float: left;
   font-size: 14px;
-  margin-left: 5%;
+  margin-left: 30px;
   padding-top: 15px;
   select {
-    width: 150px;
+    width: 120px;
   }
-  button {
-    margin-left: 5px;
+  a.manage {
+    height: 20px;
+    width: 20px;
+    display: inline-block;
+    vertical-align: middle;
   }
 }
 
@@ -27,6 +29,12 @@
     .state_submit {
       margin-left: 55px;
       margin-top: 10px;
+    }
+    .error_message {
+      color: red;
+      padding-left: 55px;
+      margin-top: 5px;
+      display: block;
     }
   }
 }
