FEATURE #6416 @30m - Framework: Allow user to save different user states under names and recall a given user state
- improved states management if there is only one customized state existing

--- a/app/views/manage_grid_states.html.haml
+++ b/app/views/manage_grid_states.html.haml
@@ -21,7 +21,8 @@
     $(".state_field.custom").simple_clone({
       label: "State ",
       label_colon: true,
-      nested: true
+      nested: true,
+      canBeEmpty: true
     });
 
     var manageForm = $(".states_manage_form form");
