--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -396,3 +396,29 @@ span.switch_btn {
     opacity: 0.4;
   }
 }
+
+#panel_grid_state_user {
+  span {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  span.copy_btn {
+    background: image-url('copy.png') no-repeat top center; 
+    width: 32px;
+    height: 32px;
+    margin-top: 15px;
+    cursor: pointer;
+    &[disabled] {
+      cursor: default;
+      opacity: 0.4;
+    }
+  }
+  span.text {
+    font-size: 1.5em;
+    color: #555;
+    margin-top: 3px;
+    width: 32px;
+  }
+}
+  
