MISC - Fix create and update ajax request url bug for wulin_master

--- a/app/views/edit_form.html.haml
+++ b/app/views/edit_form.html.haml
@@ -1,13 +1,12 @@
-- grid = controller.screen.grids.find{|g| g.name == params["grid"]}
-- if grid.action_names.include?('edit')
+- if @grid.action_names.include?('edit')
   :ruby
-    model_name = grid.model.name.underscore
-    columns = grid.columns.dup.delete_if {|x| x.name.to_s == 'id' }
+    model_name = @grid.model.name.underscore
+    columns = @grid.columns.dup.delete_if {|x| x.name.to_s == 'id' }
     datepicker_str = ''
-    object = grid.model.new
+    object = @grid.model.new
     remote_paths = []
-  .create_form{:id => "#{grid.name}_form", :title => "Update #{model_name.titleize}"}
-    = form_for object, :url => grid.path do |form|
+  .create_form{:id => "#{@grid.name}_form", :title => "Update #{model_name.titleize}"}
+    = form_for object, :url => @grid.path do |form|
       - columns.each do |column|
         - if edit_form_able?(column)
           :ruby
@@ -83,7 +82,7 @@
                 = form.text_field column_name, :style => 'width: 250px', :value => column.value(object), :readonly => column.options[:auto_fill],"data-target" => "#{column_name}_target_flag", 'data-date' => date_column?(column), 'data-datetime' => datetime_column?(column), 'data-time' => time_column?(column), "data-column" => column.name
             .field_error
       .submit
-        %input.btn.success.update_btn{:id => "#{grid.name}_batch_update", :name => "commit", :type => "submit", :value => "  Update  "}/
+        %input.btn.success.update_btn{:id => "#{@grid.name}_batch_update", :name => "commit", :type => "submit", :value => "  Update  "}/
       = hidden_field_tag 'remote_paths', j(remote_paths.uniq.compact.join(','))
 
   :javascript
