--- a/app/assets/stylesheets/menu.sass
+++ b/app/assets/stylesheets/menu.sass
@@ -107,19 +107,19 @@ $menu_width:  199px
   
   #user_nav
     :position absolute
-    :bottom 120px
+    :bottom 0
     :border-top 1px solid #c5c5c5
     :background-color #EFF3F8
-    :min-height 70px
+    :height 30px
+    :line-height 30px
     :width  $menu_width
     
     #user_email
-      :margin 7px 5px
+      :margin 0 5px
       :font-size 14px
       :white-space nowrap
       :overflow hidden
-      .email
-        :color #336699
+      :color #336699
         
     #user_action
       :margin 0 5px
