--- a/app/views/_menu.html.haml
+++ b/app/views/_menu.html.haml
@@ -1,5 +1,5 @@
 #navigation
-  #nav_toggle.open
+  #nav_toggle.open.transparent
   #app_title.ui-helper-clearfix
     - begin
       = render file: File.join(Rails.root, 'app', 'views', 'wulin_master', '_app_title')
