--- a/app/views/_menu.html.haml
+++ b/app/views/_menu.html.haml
@@ -30,17 +30,18 @@
       -# #change_password_dialog.create_form(title="Change password" style="display: none;")
       #user_email
         = User.current_user.email
-        [
-        = link_to 'X', "#{WulinOAuth.configuration['logout_uri']}?redirect_uri=#{logout_url}", title: 'Logout'
-        ]
+        = link_to 'X', "#{WulinOAuth.configuration['logout_uri']}?redirect_uri=#{logout_url}", title: 'Logout', class: 'btn'
       
   - elsif defined?(WulinAuth) and current_user
     #user_nav
-      #user_email 
-        User: 
-        %span.email= current_user.email
-      #user_action
-        = link_to 'Logout', logout_path, class: 'btn action'
+      #user_email
+        = current_user.email
+        = link_to 'X', logout_path, title: 'Logout', class: 'btn'
+      -# #user_email-#  
+      -#   User: 
+      -#   %span.email= current_user.email
+      -# #user_action
+      -#   = link_to 'Logout', logout_path, class: 'btn action'
 
   
   #activity
