MISC - User panel changes

--- a/app/assets/stylesheets/menu.sass
+++ b/app/assets/stylesheets/menu.sass
@@ -60,8 +60,8 @@ $menu_width:  199px
     // :top 42px
     :right 0 
     :left 10px
-    // :bottom 120px
-    :bottom 190px
+    :bottom 32px
+    // :bottom 190px
     ul
       :margin-top             2px
       :margin-bottom          $margin
@@ -122,6 +122,11 @@ $menu_width:  199px
       :white-space nowrap
       :overflow hidden
       :color #336699
+
+      .logout-btn
+        :padding 4px 12px 1px
+        :text-decoration none
+        :color red
         
     #user_action
       :margin 0 5px
@@ -167,5 +172,5 @@ $menu_width:  199px
           :font-size 9px
 
           // :text-align center
-          :margin-top -3px
+          // :margin-top -3px
           :margin-left 6px
