--- a/app/views/_menu.html.haml
+++ b/app/views/_menu.html.haml
@@ -36,7 +36,7 @@
     #user_nav
       #user_email
         = current_user.email
-        = link_to 'X', logout_path, title: 'Logout', class: 'btn'
+        = link_to 'X', logout_path, title: 'Logout', class: 'btn logout-btn'
       -# #user_email-#  
       -#   User: 
       -#   %span.email= current_user.email
