BUG #13637 @2h - logout button - make it looks nicer; use black cross like on popups - make it less high

--- a/app/assets/stylesheets/menu.sass
+++ b/app/assets/stylesheets/menu.sass
@@ -124,9 +124,9 @@ $menu_width:  199px
       :color #336699
 
       .logout-btn
-        :padding 4px 12px 1px
+        :line-height 0
+        :vertical-align middle
         :text-decoration none
-        :color red
         
     #user_action
       :margin 0 5px
