--- a/app/views/_menu.html.haml
+++ b/app/views/_menu.html.haml
@@ -23,13 +23,13 @@
     #user_nav
       #user_email
         = User.current_user.email
-        = link_to 'X', "#{WulinOAuth.configuration['logout_uri']}?redirect_uri=#{logout_url}", title: 'Logout', class: 'btn logout-btn'
+        = link_to image_tag('logout.jpg'), "#{WulinOAuth.configuration['logout_uri']}?redirect_uri=#{logout_url}", title: 'Logout', class: 'btn logout-btn'
       
   - elsif defined?(WulinAuth) and current_user
     #user_nav
       #user_email
         = current_user.email
-        = link_to 'X', logout_path, title: 'Logout', class: 'btn logout-btn'
+        = link_to image_tag('logout.jpg'), logout_path, title: 'Logout', class: 'btn logout-btn'
 
   
   #activity
