MISC - add allocation icon

--- a/app/assets/stylesheets/toolbar.sass
+++ b/app/assets/stylesheets/toolbar.sass
@@ -85,6 +85,8 @@ $toolbar_button_height:  50px
   :background             image-url('ui/unlink_icon.png') no-repeat top center
 .toolbar_icon_wizard
   :background             image-url('ui/wizard_icon.png') no-repeat top center
+.toolbar_icon_allocation
+  :background             image-url('ui/allocation_icon.png') no-repeat top center
 .add_detail_action
   :min-width 75px
 .configure_icon_s
