REFACTOR @1h - refactored dynamic_toolbar, add namespace and only open necessary API

--- a/app/views/_grid.html.haml
+++ b/app/views/_grid.html.haml
@@ -28,4 +28,4 @@
                              #{grid.options.to_json.html_safe});
 
   // Initial adjusting toolbar
-  dynamicToolbar('#{grid.name}', true);
+  WulinMaster.dynamicToolbar.reset('#{grid.name}', true);
