--- a/app/assets/stylesheets/toolbar.sass
+++ b/app/assets/stylesheets/toolbar.sass
@@ -87,6 +87,8 @@ $toolbar_button_height:  50px
   :background             image-url('ui/wizard_icon.png') no-repeat top center
 .toolbar_icon_allocation
   :background             image-url('ui/allocation_icon.png') no-repeat top center
+.toolbar_icon_all
+  :background             image-url('ui/all_icon.png') no-repeat top center
 .add_detail_action
   :min-width 75px
 .configure_icon_s
