Improved #screen_content css

--- a/app/assets/stylesheets/body.sass
+++ b/app/assets/stylesheets/body.sass
@@ -54,6 +54,8 @@ h1
   :height     100%
   :width      100%
   :overflow-x auto
+  :overflow-y hidden
+  :position relative
   
 h2
   :margin                     0 0 10px 0
